--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,28 @@ a:hover {
 }
 
 
+ul {
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+  }
+
+  nav ul {
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+  }
+
+  nav li a {
+    font-family: cursive;
+    color: #ff1e4b;
+    font-size: 16px;
+    text-decoration: none;
+
+  }
+
 .landing {
     background-image: url('https://i.pinimg.com/originals/23/09/13/230913a86ddd5b60a5a08ee49ebb11fe.png');
     background-attachment: fixed;   
@@ -47,4 +69,42 @@ a:hover {
     background-color: rgba(255, 255, 255, 0.452);
     color: #000;
     padding-bottom: 3%;
+}
+
+.projects {
+    margin-right: 3%;
+    margin-left: 3%;
+}
+
+.caption {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    display: none;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.caption h5 {
+    position: absolute;
+    color: #000;
+    top: 20%;
+    width: 60%;
+    text-align: center;
+    border: 4px solid white;
+    margin-left: 50px;
+    margin-right: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    font-weight: bold;
+}
+
+p{
+    font-size: 1.2em;
+}
+
+i {
+    color: #fff;
+    font-size: 1.6em;
 }
