--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ a:hover {
 
 .navbar {
     position: fixed;
+    background: none;
 }
 
 
@@ -46,7 +47,7 @@ ul {
 
   nav li a {
     font-family: cursive;
-    color: #ff1e4b;
+    color: #fff;
     font-size: 16px;
     text-decoration: none;
 
