--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ ul {
 
 .card {
     background-color: rgba(35, 173, 137, 0.13);
+    /* margin: 0.1%; */
+    padding: 1%;
+    box-shadow: 0px 8px 60px -10px rgba(13, 28, 39, 0.6);
+
     
 }
 
